--- a/projects.html
+++ b/projects.html
@@ -12,26 +12,33 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <!--HOVER CSS-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!--animate.style-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <!--typeit.js-->    
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script>
+        <!--AOS JS-->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-
-
-       <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> <!--Favicon.ico-->
 
         <title>Louisville Rocketry | Projects</title>
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     </head>
     <body>
         <!-- <img src="./img/hero-left.png" class="hero-left" alt="" /> -->
 
-        <div id="header">                                     
-            <header>            
-                <a href="#"><img src="./img/logo.png" alt="Logo" /></a>                  
-                <ul class="navItems">                                       
-                    <li><a href="index.html">HOME</a></li>           
-                    <li>                                       
-                        <a href="projects.html" class="active-nav">PROJECTS</a>             
-                    </li>                                                       
+        <div id="header">
+            <header>
+                <a href="index.html"><img src="./img/logo.png" alt="Logo" class = "hvr-pulse-grow"/></a>
+                <ul class="navItems">
+                    <li><a href="index.html">HOME</a></li>
+                    <li>
+                        <a href="projects.html" class="active-nav">PROJECTS</a>
+                    </li>
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
@@ -46,13 +53,17 @@
                 <div id="mobile-nav">
                     <i class="fa-solid fa-xmark fa-lg" id="cross"></i>
                     <ul>
-                        <li><a href="#" class="active-nav">HOME</a></li>
-                        <li><a href="#">PROJECTS</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li>
+                            <a href="projects.html" class="active-nav"
+                                >PROJECTS</a
+                            >
+                        </li>
                         <li><a href="outreach.html">OUTREACH</a></li>
-                        <li><a href="#">SPONSORS</a></li>
-                        <li><a href="#">TEAM</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                        <li><a href="#" class="border-red">JOIN</a></li>
+                        <li><a href="sponsor.html">SPONSORS</a></li>
+                        <li><a href="team.html">TEAM</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
+                        <li><a href="join.html" class="border-red">JOIN</a></li>
                     </ul>
                 </div>
             </header>
@@ -61,14 +72,31 @@
         <section class="project-wrap">
             <div id="project">
                 <div class="left">
-                    <h2>LR-D1 Experimental Liquid Engine</h2>
-                    <p class="graycl">(Coming Soon - Under Development)</p>
-                    <img src="./img/rocket.png" alt="" />
+                    <h2 class = " animate__animated animate__backInUp">LR-D1 <span style = "color:red !important;">Experimental</span> Liquid Engine</h2>
+                    <p class="graycl animate__animated animate__fadeInLeftBig "></p>
+                    
+                    <script>
+
+                    new TypeIt(".graycl", {
+                    strings: "(Coming Soon - Under Development)",
+                    speed: 70,
+                    waitUntilVisible: true,
+                    repeat: true,
+                    }).go();
+
+                    </script>
+
+
+
+
+                    <img src="./img/rocket.png" alt="rocket" class="animate__animated animate__rotateIn" />
                 </div>
-                <div class="right">
-                    <h3 class="red-tag">OUR WORK</h3>
-                    <h2>B-12 Rocket Model</h2>
-                    <p class="graycl">
+                <div class="right animate__animated animate__zoomIn">
+                    <h3 class="red-tag" id = "ourwork">OUR WORK</h3>  
+
+                    <h2 class = "animate__animated animate__pulse animate__infinite">B-12 Rocket Model</h2>
+                    <p class="graycl">     
+
                         Optimized for mission flight to Mars, this engineering
                         marvel can withstand temperatures up to 5000 K. Thats
                         not all, the shiny aluminim coating is reflective and
@@ -81,20 +109,20 @@
         <div id="footer">
             <div class="footer-nav">
                 <div class="social-icons">
-                    <i class="fa-brands fa-instagram fa-xl"></i
-                    ><i class="fa-brands fa-facebook fa-xl"></i>
+                    <a target="_blank" href="http://instagram.com/louisvillerocketry"><i class="fa-brands fa-instagram fa-xl hvr-bounce-in"></i></a>
+                    <a target="_blank" href="http://facebook.com/louisvillerocketry"><i class="fa-brands fa-facebook fa-xl hvr-bounce-in"></i></a>
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="home.html">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="projects.html">PROJECTS</a></li>
                         <li><a href="outreach.html">OUTREACH</a></li>
-                        <li><a href="#">SPONSORS</a></li>
-                        <li><a href="#">TEAM</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="sponsor.html">SPONSORS</a></li>
+                        <li><a href="team.html">TEAM</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
-                <a href="#" class="btn btn-gray">JOIN</a>
+                <a href="join.html" class="btn btn-gray hvr-bounce-to-left">JOIN</a>
             </div>
             <p>© 2022 Louisville Rocketry</p>
         </div>
