updated down arrow and removed roll in animations, it's too much

--- a/join.html
+++ b/join.html
@@ -68,9 +68,9 @@
             </header>
         </div>
         <div id="join">
-            <div class="join-wrapper animate__animated animate__rollIn animate__slow ">
+            <div class="join-wrapper  ">
                 <div class="left">
-                    <form action="#" class = "animate__animated animate__rollIn animate__slow">
+                    <form action="#" class = "">
                         <input type="text" placeholder="Email" />
                         <input type="text" placeholder="Name" />
                         <input type="text" placeholder="Phone Number" />
