--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                     <a target="_blank" href="http://instagram.com/louisvillerocketry" class = "hvr-bounce-in"><i class="fa-brands fa-instagram fa-xl"></i></a>
                     <a target="_blank" href="http://facebook.com/louisvillerocketry" class = "hvr-bounce-in "><i class="fa-brands fa-facebook fa-xl"></i></a>
                 </div>
-                <form method = "POST" action="" class = "animate__animated animate__rollIn animate__slow">
+                <form method = "POST" action="" >
                     <div class="left">
                         <input type="email" placeholder="Email" required/> 
                         <input type="text" placeholder="Name" required/>
