--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div id="header">
             <header>
-                <a href="index.html"><img src="./img/logo.png" alt="Logo" class = "hvr-pulse-grow"/></a>
+                <a href="index.html"><img src="./img/logo.png" alt="Logo" /></a>
                 <ul class="navItems">
                     <li><a href="index.html" class="active-nav">HOME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
@@ -64,11 +64,8 @@
             </header>
         </div>
         <div id="hero">
-            <i
-                class="fa-solid fa-arrow-down fa-2xl"
-                style="color: white; height: 30px; width: 30px"
-                id="bounce"
-            ></i>
+            <img id="bounce"style="color: white; height: 30px; width: 30px" src="./img/downarrow.svg">
+           
             <h1><img src="./img/hero-text.png" alt="louisville" class = " animate__animated animate__zoomInDown animate__slow" /></h1>
             <h2><img src="./img/hero-text2.png" alt="rocketry" class = " animate__animated animate__zoomInDown animate__slow" /></h2>
             <p class = "animate__animated animate__zoomInRight animate__slow ">
@@ -76,7 +73,7 @@
                 rockets and pursuing missions in aerospace engineering. Our team
                 emphasizes core engineering skills and adaptive problem solving.
             </p>
-            <a href="#about" class="btn btn-red animate__animated animate__jackInTheBox animate__slow hvr-pulse-grow">LEARN MORE</a>
+            <a href="#about" class="btn btn-red  hvr-pulse-grow">LEARN MORE</a>
         </div>
         <section id="about-us">
             <div id="about">
