--- a/contact.html
+++ b/contact.html
@@ -65,9 +65,9 @@
         </div>
         <div id="contact">
             <div class="contact-wrapper">
-                <h3 class="red-tag animate__animated animate__zoomInDown animate__slow" >CONTACT</h3>
-                <h1 class = "animate__animated animate__zoomInDown animate__slow">Get in Touch</h1>
-                <p class = "animate__animated animate__zoomInRight animate__slow">
+                <h3 class="red-tag " >CONTACT</h3>
+                <h1 >Get in Touch</h1>
+                <p class = "">
                     Reach out to us:
                     <span class="red">louisvillerocketry@gmail.com</span>
                 </p>
