--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <div id="hero">
             <img id="bounce"style="color: white; height: 30px; width: 30px" src="./img/downarrow.svg">
            
-            <h1><img src="./img/hero-text.png" alt="louisville" class = " animate__animated animate__zoomInDown animate__slow" /></h1>
-            <h2><img src="./img/hero-text2.png" alt="rocketry" class = " animate__animated animate__zoomInDown animate__slow" /></h2>
-            <p class = "animate__animated animate__zoomInRight animate__slow ">
+            <h1><img src="./img/hero-text.png" alt="louisville" class = " animate__animated animate__backInDown " /></h1>
+            <h2><img src="./img/hero-text2.png" alt="rocketry" class = " animate__animated animate__backInDown " /></h2>
+            <p class = "animate__animated animate__fadeIn  ">
                 We are a group of highschoolers passionate about creating
                 rockets and pursuing missions in aerospace engineering. Our team
                 emphasizes core engineering skills and adaptive problem solving.
