--- a/join.html
+++ b/join.html
@@ -70,7 +70,10 @@
         <div id="join">
             <div class="join-wrapper  ">
                 <div class="left">
+                    
                     <form action="#" class = "">
+                        <p class="red-tag">GET INVOLVED</p>
+                        <h1 class=" animate__animated animate__fadeIn animate__slow">Join Our Team</h1>
                         <input type="text" placeholder="Email" />
                         <input type="text" placeholder="Name" />
                         <input type="text" placeholder="Phone Number" />
@@ -89,7 +92,7 @@
                     </form>
                 </div>
                 <div class="right">
-                    <img class="join-text animate__animated animate__zoomInDown animate__slow" src="./img/join-text.png" alt=""  />
+                    <img class="join-text" src="./img/join-text.png" alt=""  />
                     <img class="join-bg  " src="./img/join-img.png" alt="" />
                 </div>
             </div>
