--- a/outreach.html
+++ b/outreach.html
@@ -64,30 +64,30 @@
             </header>
         </div>
         <div id="hero" class="outreach half-hero">
-            <h3 class="red-tag animate__animated animate__zoomInDown animate__slow">COMMUNITY</h3>
-            <h1 class = "animate__animated animate__zoomInDown animate__slow">Outreach Events</h1>
-            <p class = "animate__animated animate__zoomInRight animate__slow">Some of the work our team has done to engage our community!</p>
+            <h3 class="red-tag">COMMUNITY</h3>
+            <h1 >Outreach Events</h1>
+            <p >Some of the work our team has done to engage our community!</p>
         </div>
 
         <div id="event" >
             <div class="event-container">
                 <div class="event-details">
                     <div class="left">
-                        <h1 class = "animate__animated animate__bounceInLeft">
+                        <h1 >
                             <span class="blue-txt ">Blue Origin</span> Speaker
                             Event
                         </h1>
-                        <div class="speaker animate__animated animate__pulse animate__infinite">
+                        <div class="speaker ">
                             <img src="./img/speaker.png" alt="" />
                             <div class="speaker-details">
                                 <div>
                                     <h2>
-                                        <span class = "hvr-bounce-in" ><a style = "color: white !important; " target = "_blank" href= "https://www.linkedin.com/in/eseyffert/">Eduardo Seyffert</a> </span
-                                        ><i
+                                        <span >Eduardo Seyffert </span
+                                        ><a style="color:aliceblue;" href="https://www.linkedin.com/in/eseyffert/"><i
                                             class="fa-brands fa-linkedin fa-sm"
-                                        ></i>
+                                        ></i></a>
                                     </h2>
-                                    <p>
+                                    <p >
                                         Senior Engineer, Marketing and Sales
                                         Strategy at Blue Origin
                                     </p>
@@ -108,18 +108,18 @@
                         ></iframe>
                     </div>
                 </div>
-                <p class = "aos-animate" data-aos="fade-right" data-aos-duration="600">
+                <p style="text-align:center;">
                     https://manualredeye.com/93268/news/manualnews/blue-origin-executive-joins-the-rocketry-club-for-a-qa/
                 </p>
             </div>
         </div>
 
         <div id="rocket">
-            <h1 class = "aos-animate" data-aos="zoom-in-down" data-aos-duration="800">Kentucky Science Center's Engineering Day</h1>
+            <h1 >Kentucky Science Center's Engineering Day</h1>
 
             <div class="rocket-wrap">
                 <div class="left">
-                    <h2 class = "aos-animate" data-aos="zoom-in-right" data-aos-duration="1000">
+                    <h2 >
                         In partnership with
                         <span class="orange-txt"></span>
 
@@ -132,15 +132,15 @@
 
 
                     </h2>
-                    <p style = "padding-top: 3% !important; " class = "aos-animate" data-aos="zoom-in-right" data-aos-duration="780">
+                    <p style = "padding-top: 3% !important; ">
                         River City Rocketry is a nationally ranked collegiate
                         rocket team that designs, manufactures, and launches
                         high powered rockets.
                     </p>
-                    <img class = "aos-animate" data-aos="zoom-out-up" data-aos-duration = "1000" src="./img/rocketbadge.png" alt="" />
+                    <img  src="./img/rocketbadge.png" alt="" />
                 </div>
                 <div class="right">
-                    <img  class = "aos-animate" data-aos="zoom-out-up" data-aos-duration = "1000" src="./img/rocketimg.png" alt="" />
+                    <img  src="./img/rocketimg.png" alt="" />
                 </div>
             </div>
         </div>
