--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
         <section class="project-wrap">
             <div id="project">
                 <div class="left">
-                    <h2 class = " animate__animated animate__backInUp">LR-D1 <span style = "color:red !important;">Experimental</span> Liquid Engine</h2>
+                    <h2 >LR-D1 <span style = "color:red !important;">Experimental</span> Liquid Engine</h2>
                     <p class="graycl animate__animated animate__fadeInLeftBig "></p>
                     
                     <script>
@@ -86,15 +86,12 @@
 
                     </script>
 
-
-
-
-                    <img src="./img/rocket.png" alt="rocket" class="animate__animated animate__rotateIn" />
+                    <img src="./img/rocket.png" alt="rocket" />
                 </div>
-                <div class="right animate__animated animate__zoomIn">
+                <div class="right">
                     <h3 class="red-tag" id = "ourwork">OUR WORK</h3>  
 
-                    <h2 class = "animate__animated animate__pulse animate__infinite">B-12 Rocket Model</h2>
+                    <h2 >B-12 Rocket Model</h2>
                     <p class="graycl">     
 
                         Optimized for mission flight to Mars, this engineering
