--- a/sponsor.html
+++ b/sponsor.html
@@ -67,24 +67,24 @@
             </header>
         </div>
         <div id="hero" class="sponsor half-hero">
-            <h3 class="red-tag animate__animated animate__zoomInDown animate__slow">SPONSORS</h3>
-            <h1 class = "animate__animated animate__zoomInDown animate__slow">Thank you to all of our incredible sponsors</h1>
-            <p class = "animate__animated animate__zoomInRight animate__slow">Without the contributions from our sponsors The Lousville Rocketry Team would not be possible. Sponsors enable us to build and compete. </p>
-            <a href="contact.html" class="btn btn-red animate__animated animate__bounceInRight hvr-pulse-grow">SPONSOR US</a>
+            <h3 class="red-tag">SPONSORS</h3>
+            <h1 >Thank you to all of our incredible sponsors</h1>
+            <p >Without the contributions from our sponsors The Lousville Rocketry Team would not be possible. Sponsors enable us to build and compete. </p>
+            <a href="contact.html" class="btn btn-red hvr-pulse-grow">SPONSOR US</a>
         </div>
         <div id="logos">
             <div class="top">
-                <img src="./img/sponsor1.png" alt="HUMANA" class = "animate__animated animate__bounceInLeft "/>
-                <img src="./img/sponsor2.png" alt="SPECTRUM TRACKING" class = "animate__animated animate__bounceInRight "/>
+                <img src="./img/sponsor1.png" alt="HUMANA" class = "animate__animated animate__fadeInLeft "/>
+                <img src="./img/sponsor2.png" alt="SPECTRUM TRACKING" class = "animate__animated animate__fadeInRight "/>
             </div>
             <div class="bottom">
-                <img src="./img/sponsor3.png" alt="ATLAS"  class = "animate__animated animate__bounceInDown "/>
+                <img src="./img/sponsor3.png" alt="ATLAS"  class = "animate__animated animate__fadeInDown "/>
             </div>
         </div>
 
         <div id="private-sponsors" >
             
-            <img src="./img/SPONSOR-TRIANGLE.png" class="s-triangle" alt="" style = "pointer-events: none !important;"/>
+           
             <h1 class = "aos-animate" data-aos="zoom-in-down" data-aos-duration="800" >Private Sponsors</h1>
             <div class="private-sponsor_details aos-animate" data-aos="zoom-in-left" data-aos-duration="800">
                 <h3 class="red-tag" id = 'kelly'></h3>
