--- a/join.html
+++ b/join.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
-         <!--HOVER CSS-->
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
-         integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A=="
-         crossorigin="anonymous" referrerpolicy="no-referrer" />
-         <!--animate.style-->
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-         <!--typeit.js-->    
-         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-     <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script>
-         <!--AOS JS-->
-         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
- 
- 
-         <title>Louisville Rocketry | Join</title>
-         <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-    </head>
-    <body>
-        <div id="mobile-nav">
-            <i class="fa-solid fa-xmark fa-xl" id="cross"></i>
-            <ul>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--HOVER CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--animate.style-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--typeit.js-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/typeit@8.5.5/dist/index.umd.js"></script>
+    <!--AOS JS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+
+    <title>Louisville Rocketry | Join</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+</head>
+
+<body>
+    <div id="mobile-nav">
+        <i class="fa-solid fa-xmark fa-xl" id="cross"></i>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="projects.html">PROJECTS</a></li>
+            <li><a href="outreach.html">OUTREACH</a></li>
+            <li><a href="sponsor.html">SPONSORS</a></li>
+            <li><a href="team.html">TEAM</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li>
+                <a href="join.html" class="border-red active-nav">JOIN</a>
+            </li>
+        </ul>
+    </div>
+
+    <div id="header" class="top-p">
+        <header>
+            <a href="index.html"><img src="./img/logo.png" alt="Logo" class="hvr-pulse-grow" /></a>
+            <ul class="navItems">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="outreach.html">OUTREACH</a></li>
@@ -42,82 +56,60 @@
                     <a href="join.html" class="border-red active-nav">JOIN</a>
                 </li>
             </ul>
-        </div>
+            <i class="fa-solid fa-bars fa-lg" style="color: white; height: 30px; width: 30px" id="hamburger"></i>
+        </header>
+    </div>
+    <div style="margin-bottom: 100px;" id="join">
+        <div class="join-wrapper  ">
+            <div class="left">
 
-        <div id="header" class="top-p">
-            <header>
-                <a href="index.html"><img src="./img/logo.png" alt="Logo" class = "hvr-pulse-grow" /></a>
-                <ul class="navItems">
+                <form action="https://formspree.io/f/mlezynqq" method="POST">
+                    <p class="red-tag">GET INVOLVED</p>
+                    <h1 class=" animate__animated animate__fadeIn animate__slow">Join Our Team</h1>
+                    <input type="text" name="email"placeholder="Email" />
+                    <input type="text"name="Name" placeholder="Name" />
+                    <input type="text"name="PhoneNumber" placeholder="Phone Number" />
+                    <input type="text"name="School and Grade" placeholder="School and Grade" />
+
+                    <div>
+                        <textarea style="resize: none !important; " name="comment" id=""
+                            placeholder="What made you intrested in joining the Rocketry Team?"></textarea>
+
+                        <button class="form-btn border-red" type="submit">SUBMIT</button>
+                    </div>
+
+                </form>
+            </div>
+            <div class="right">
+                <img class="join-text" src="./img/join-text.png" alt="" />
+                <img class="join-bg  " src="./img/join-img.png" alt="" />
+            </div>
+        </div>
+    </div>
+
+    <div id="footer">
+        <div class="footer-nav">
+            <div class="social-icons">
+                <a target="_blank" href="http://instagram.com/louisvillerocketry"><i
+                        class="fa-brands fa-instagram fa-xl hvr-bounce-in"></i></a>
+                <a target="_blank" href="http://facebook.com/louisvillerocketry"><i
+                        class="fa-brands fa-facebook fa-xl hvr-bounce-in"></i></a>
+            </div>
+            <div class="navbar">
+                <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li><a href="outreach.html">OUTREACH</a></li>
                     <li><a href="sponsor.html">SPONSORS</a></li>
                     <li><a href="team.html">TEAM</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
-                    <li>
-                        <a href="join.html" class="border-red active-nav"
-                            >JOIN</a
-                        >
-                    </li>
                 </ul>
-                <i
-                    class="fa-solid fa-bars fa-lg"
-                    style="color: white; height: 30px; width: 30px"
-                    id="hamburger"
-                ></i>
-            </header>
-        </div>
-        <div id="join">
-            <div class="join-wrapper  ">
-                <div class="left">
-                    
-                    <form action="#" class = "">
-                        <p class="red-tag">GET INVOLVED</p>
-                        <h1 class=" animate__animated animate__fadeIn animate__slow">Join Our Team</h1>
-                        <input type="text" placeholder="Email" />
-                        <input type="text" placeholder="Name" />
-                        <input type="text" placeholder="Phone Number" />
-                        <input type="text" placeholder="School and Grade" />
-
-                        <textarea
-                            style = "resize: none !important; " 
-                            name="comment"
-                            id=""
-                            placeholder="What made you intrested in joining the Rocketry Team?"
-                        ></textarea>
-
-                        <div class="form-btn">
-                            <a href="#" class="border-red">SUBMIT</a>
-                        </div>
-                    </form>
-                </div>
-                <div class="right">
-                    <img class="join-text" src="./img/join-text.png" alt=""  />
-                    <img class="join-bg  " src="./img/join-img.png" alt="" />
-                </div>
             </div>
+            <a href="join.html" class="btn btn-gray hvr-bounce-to-left">JOIN</a>
         </div>
+        <p>© 2022 Louisville Rocketry</p>
+    </div>
+    <script src="./script.js"></script>
+</body>
 
-        <div id="footer">
-            <div class="footer-nav">
-                <div class="social-icons">
-                    <a target="_blank" href="http://instagram.com/louisvillerocketry"><i class="fa-brands fa-instagram fa-xl hvr-bounce-in"></i></a>
-                    <a target="_blank" href="http://facebook.com/louisvillerocketry"><i class="fa-brands fa-facebook fa-xl hvr-bounce-in"></i></a>
-                </div>
-                <div class="navbar">
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="projects.html">PROJECTS</a></li>
-                        <li><a href="outreach.html">OUTREACH</a></li>
-                        <li><a href="sponsor.html">SPONSORS</a></li>
-                        <li><a href="team.html">TEAM</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
-                    </ul>
-                </div>
-                <a href="join.html" class="btn btn-gray hvr-bounce-to-left">JOIN</a>
-            </div>
-            <p>© 2022 Louisville Rocketry</p>
-        </div>
-        <script src="./script.js"></script>
-    </body>
 </html>
